--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="favicon.ico" />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="white" />
@@ -27,91 +28,91 @@
     <section class="card-container">
         <!-- Curiosidades de Shonen -->
         <div class="card">
-            <img src="../images/naruto.jpg" alt="Naruto Uzumaki" width="100">
+            <img src="./images/naruto.jpg" alt="Naruto Uzumaki" width="100">
             <h3>Naruto Uzumaki</h3>
             <p>O nome "Naruto" vem de uma cidade real no Japão famosa pelos redemoinhos no mar.</p>
         </div>
         <div class="card">
-            <img src="../images/luffy.jpg" alt="Monkey D. Luffy" width="100">
+            <img src="./images/luffy.jpg" alt="Monkey D. Luffy" width="100">
             <h3>Monkey D. Luffy</h3>
             <p>One Piece é o mangá mais vendido de todos os tempos, com mais de 500 milhões de cópias.</p>
         </div>
         <div class="card">
-            <img src="../images/goku.jpg" alt="Goku" width="100">
+            <img src="./images/goku.jpg" alt="Goku" width="100">
             <h3>Goku</h3>
             <p>Goku foi inspirado na lenda chinesa de "Jornada ao Oeste".</p>
         </div>
         
         <!-- Curiosidades de Konosuba -->
         <div class="card">
-            <img src="../images/konosuba.jpg" alt="Konosuba" width="100">
+            <img src="./images/konosuba.jpg" alt="Konosuba" width="100">
             <h3>Konosuba</h3>
             <p>O autor de Konosuba, Natsume Akatsuki, começou a série como uma web novel antes de ser publicada oficialmente.</p>
         </div>
 
         <!-- Curiosidades de Shoujo -->
         <div class="card">
-            <img src="../images/sailor_moon.jpg" alt="Sailor Moon" width="100">
+            <img src="./images/sailor_moon.jpg" alt="Sailor Moon" width="100">
             <h3>Sailor Moon</h3>
             <p>Sailor Moon popularizou o gênero "magical girl" em todo o mundo.</p>
         </div>
         <div class="card">
-            <img src="../images/cardcaptor_sakura.jpg" alt="Cardcaptor Sakura" width="100">
+            <img src="./images/cardcaptor_sakura.jpg" alt="Cardcaptor Sakura" width="100">
             <h3>Cardcaptor Sakura</h3>
             <p>Originalmente, Sakura foi criada como uma personagem secundária.</p>
         </div>
         <div class="card">
-            <img src="../images/fruit_basket.jpg" alt="Fruits Basket" width="100">
+            <img src="./images/fruit_basket.jpg" alt="Fruits Basket" width="100">
             <h3>Fruits Basket</h3>
             <p>O mangá Fruits Basket foi um dos primeiros a abordar temas de saúde mental no universo shoujo.</p>
         </div>
 
         <!-- Curiosidades de Mecha -->
         <div class="card">
-            <img src="../images/gundam.jpg" alt="Gundam" width="100">
+            <img src="./images/gundam.jpg" alt="Gundam" width="100">
             <h3>Gundam</h3>
             <p>Gundam foi o primeiro anime a introduzir mechas com pilotos humanos.</p>
         </div>
         <div class="card">
-            <img src="../images/evangelion.jpg" alt="Evangelion" width="100">
+            <img src="./images/evangelion.jpg" alt="Evangelion" width="100">
             <h3>Neon Genesis Evangelion</h3>
             <p>Evangelion revolucionou o gênero mecha ao focar em temas psicológicos e filosóficos.</p>
         </div>
         <div class="card">
-            <img src="../images/code_geass.jpg" alt="Code Geass" width="100">
+            <img src="./images/code_geass.jpg" alt="Code Geass" width="100">
             <h3>Code Geass</h3>
             <p>Lelouch, de Code Geass, foi inspirado no personagem Light Yagami, de Death Note, em termos de astúcia e complexidade.</p>
         </div>
 
         <!-- Curiosidades sobre Autores -->
         <div class="card">
-            <img src="../images/oda.jpg" alt="Eiichiro Oda" width="100">
+            <img src="./images/oda.jpg" alt="Eiichiro Oda" width="100">
             <h3>Eiichiro Oda</h3>
             <p>Oda, criador de One Piece, afirma que já planejou o final da série há muitos anos.</p>
         </div>
         <div class="card">
-            <img src="../images/akira_toriyama.jpg" alt="Akira Toriyama" width="100">
+            <img src="./images/akira_toriyama.jpg" alt="Akira Toriyama" width="100">
             <h3>Akira Toriyama</h3>
             <p>Akira Toriyama, criador de Dragon Ball, também desenhou o famoso jogo Chrono Trigger.</p>
         </div>
         <div class="card">
-            <img src="../images/hayao_miyazaki.jpg" alt="Hayao Miyazaki" width="100">
+            <img src="./images/hayao_miyazaki.jpg" alt="Hayao Miyazaki" width="100">
             <h3>Hayao Miyazaki</h3>
             <p>Hayao Miyazaki, fundador do Studio Ghibli, sempre incluiu mensagens ecológicas em seus filmes.</p>
         </div>
         <div class="card">
-            <img src="../images/rumiko_takahashi.jpg" alt="Rumiko Takahashi" width="100">
+            <img src="./images/rumiko_takahashi.jpg" alt="Rumiko Takahashi" width="100">
             <h3>Rumiko Takahashi</h3>
             <p>Rumiko Takahashi, autora de InuYasha e Ranma ½, é uma das mangakás mais bem-sucedidas da história.</p>
         </div>
         <div class="card">
-            <img src="../images/osamu_tezuka.jpg" alt="Osamu Tezuka" width="100">
+            <img src="./images/osamu_tezuka.jpg" alt="Osamu Tezuka" width="100">
             <h3>Osamu Tezuka</h3>
             <p>Conhecido como o "pai do mangá", Tezuka criou séries revolucionárias como Astro Boy e Black Jack.</p>
         </div>
 
         <div class="card">
-    <img src="../images/zero_no_tsukaima.jpg" alt="Zero no Tsukaima" width="100">
+    <img src="./images/noboru_yamaguchi.jpg" alt="Zero no Tsukaima" width="100">
     <h3>Noboru Yamaguchi</h3>
     <p>Noboru Yamaguchi, autor de Zero no Tsukaima, teve um grande impacto no gênero de fantasia escolar, mas infelizmente faleceu antes de completar a obra. O final da série foi escrito com base em suas anotações e rascunhos.</p>
 </div>
