--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     
-    <div class="conteiner">
+    <div class="container">
     <h1>Curiosidades de Animes</h1>
     
     <p>Esta é uma lista de curiosidades sobre os principais animes e mangás do mundo.</p>
